fixed formatting and now arrows show up for the slider! Also changed color of arrows in the slick-carousel/slick/slick-theme.css file so that they would be visible in both regular and dark mode

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -18,14 +18,16 @@
     font-size: 3rem;
     color: #3a5743ff;
     font-weight: 700;
-    margin: 3rem;
+    margin: auto;
 }
 
 .heading {
+    text-align: center;
     color: #7bae7fff;
 }
 
 .nav-links {
+    text-align: center;
     display: flex;
     list-style: none;
     padding-left: 0;
